--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,9 +7,9 @@
     "postinstall": "echo \"Creating empty 'development.ts' it does not exist…\" && [[ ! -e deployments/greeter/development.ts ]] && (command -v touch &> /dev/null && touch deployments/greeter/development.ts || copy /b deployments/greeter/development.ts +,,); true",
     "test": "./test-all.sh",
     "build": "./build-all.sh",
-    "node": "substrate-contracts-node --dev --port 9944 --base-path ./.node-data",
+    "node": "substrate-contracts-node --dev --port 9945 --base-path ./.node-data",
     "script": "ts-node --cwd=scripts",
-    "deploy": "pnpm run script deploy",
+    "deploy": "pnpm run script",
     "contracts-ui": "open https://contracts-ui.substrate.io/?rpc=ws://127.0.0.1:9944",
     "explorer-ui": "open https://polkadot.js.org/apps/#/explorer?rpc=ws://127.0.0.1:9944",
     "type-check": "tsc --pretty --noEmit",
