add psp22 to the deployment script

--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 
 resolver = "1"
-members = ["src/greeter", "src/oracleexample"]
+members = ["src/greeter", "src/oracleexample", "src/psp22"]
