copy abax contract metadata json to test

--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -23,6 +23,7 @@
     "./deployments/**/*.json",
     "./deployments/**/*.ts",
     "./scripts/**/*.ts",
-    "./test/**/*.ts"
+    "./test/**/*.ts",
+    "./test/**/*.json"
   ]
 }
