move abax assets to separate file

--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -24,6 +24,7 @@
     "./deployments/**/*.ts",
     "./scripts/**/*.ts",
     "./test/**/*.ts",
+    "./data/**/*.ts",
     "./test/**/*.json"
   ]
 }
