add greeter and greetercaller contracts

--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -3,9 +3,8 @@
 resolver = "1"
 members = [
     "src/greeter",
+    "src/doublegreeter",
     "src/greetercaller",
-    "src/oracleexample",
-    "src/psp22",
-    "src/abaxcaller",
-    "src/andromedacaller",
+    "src/doublegreetercaller",
+    "src/greetercaller_with_storage",
 ]
